# cassetta_attrezzi

./: .gitignore  pyproject.toml
src/attrezzi/: dwh.py  general.py  mstr.py
src/cassetta_attrezzi/: connect_dw.py
