[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attrezzi"
version = "0.1.0"
description = "Utility"
authors = [
  { name="ing. Comenò", email="rosato.fabio@gmail.com" }
]
dependencies = [
  "oracledb",
  "pandas",
  "python-dotenv"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]