[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attrezzi"
version = "0.1.0"
requires-python = ">=3.9"
description = "Utility"
authors = [
  { name="ing. Comenò", email="rosato.fabio@gmail.com" }
]
dependencies = [
  "python-dotenv"
]

[project.optional-dependencies]
dwh = [
  "oracledb",
  "pandas"
]

mstr = [
  "mstrio-py",
  "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]
